--- a/Login_MAUI/wwwroot/index.html
+++ b/Login_MAUI/wwwroot/index.html
@@ -7,6 +7,8 @@
 	<base href="/" />
 	<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
 	<link href="css/app.css" rel="stylesheet" />
+	<link href="https://cdn.syncfusion.com/blazor/19.4.48/styles/bootstrap5.css" 
+		  rel="stylesheet" />
 	<link href="Login_MAUI.styles.css" rel="stylesheet" />
 </head>
 
